M4_EXTRA_DIST =  \
	ac_func_fseeko.m4 \
	argz.m4 \
	ax_c___attribute__.m4 \
  ax_lang_compiler_ms.m4 \
	ax_cflags_warn_all.m4 \
	ax_prefix_config_h.m4 \
	ax_pthread.m4 \
	cxx_have_bool.m4 \
	cxx_have_lstring.m4 \
	cxx_have_namespaces.m4 \
	cxx_have_std_libs.m4 \
	cxx_have_std_namespace.m4 \
	libtool.m4 \
	ltdl.m4 \
	lt~obsolete.m4 \
	ltoptions.m4 \
	ltsugar.m4 \
	ltversion.m4 \
	pkg.m4 \
	wizard_check_pthread_lib.m4 \
	wizard_func_mmap_fileio.m4 
